Fixed spacing and comments
Fixed spacing and comments
10/6

--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,12 @@
 /***************************** LAYOUT *****************/
 
-/***clean sticky footer ***/
 html, body{
+    /***clean sticky footer***/
 	height: 100%; 
 }
 
-/***clean sticky footer ***/
 body{
+    /***clean sticky footer***/
 	margin:0px;
 	padding:0px;
 }
@@ -16,7 +16,7 @@ body{
 	border:5px solid black;
 	color:black;
 
-	/***clean sticky footer ***/
+	/***clean sticky footer***/
 	/*width:100%;*/
 	min-height: 100%;
 	height:auto !important;
@@ -29,26 +29,21 @@ body{
 	margin-right:auto;
 	margin-left:auto; 
 
-	/***clean sticky footer ***/
+	/***clean sticky footer***/
 	width:100%;
 	padding:0px 0px 41px 0px;
 	min-width: 942px;
 }
 
-/***clean sticky footer ***/
 #innerContainer{
+    /***clean sticky footer***/
 	width: 942px;
 	margin: 0px auto;
 }
 
 #footer{
-	/*position:absolute;
+    /***clean sticky footer***/
 	width:100%;
-	background-color:blue;
-    height:100px;*/
-
-    /***clean sticky footer ***/
-    width:100%;
     height:41px;
     min-width: 942px;
 }
@@ -57,7 +52,9 @@ p {
 	margin-bottom:15px; 
 	font-size:13px;
 }
+
 /***************************** NAVIGATION *****************/
+
 nav{
 	text-align: center;
 }
@@ -80,7 +77,9 @@ nav li{
 #wrapperWhite nav li a:hover{
 	color:#615E5F;
 }
+
 /***************************** INDEX PAGE *****************/
+
 #photosIndex{
 	width:960px;
 	height:600px;
@@ -105,7 +104,9 @@ nav li{
 	font-family:Georgia;
 	font-size: 24px;
 }
+
 /***************************** PRODUCT PAGE *****************/
+
 .productRowClass{
 	padding-top:1px;
 	padding-left:1px;
@@ -118,8 +119,8 @@ nav li{
 	margin:30px;
 }
 
-/*fixed a bug where the href link was showing on some pictures 4/22/13 */
 .productRowClass a{
+    /*fixed a bug where the href link was showing on some pictures 4/22/13*/
 	color:white;
 }
 
@@ -335,7 +336,9 @@ section{
 	#basket{
 		background-position: 0 -284px; width: 234px; height: 234px;
 	}
+	
 /************************* PRODUCT X PAGE *******************/
+
 #prodImage{
 	text-align: center;
     background-color: white;
@@ -355,7 +358,9 @@ section{
 	margin-right:8px;
 	margin-left:8px;
 }
+
 /*************************** ABOUT PAGE *******************/
+
 #photos {
 	float:left;
 	width:333px;
@@ -372,7 +377,7 @@ section{
 }
 
 #textTitle{
-	/*compensating for normalize css */
+	/*compensating for normalize css*/
 	margin-top:0px;
 }
 
@@ -380,7 +385,9 @@ section{
 	margin-right:8px;
 	margin-left:8px;
 }
+
 /*************************** CONTACT PAGE *******************/
+
 #contactInfo p{
 	padding-top:10px;
 	color:#615E5F;
@@ -412,7 +419,7 @@ iframe:hover{
 }
 
 #contactForm ul{
-	/*overriding normalize left padding 40px */
+	/*overriding normalize left padding 40px*/
 	padding:0px;
 }
 
